# research_code_template

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  init_repo.sh  main.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
scripts/: extract_release_notes.py  init_repo.sh
