[project]
name = "placeholder_name"
version = "0.1.0"
description = "Code Project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.4",
    "rich>=14.2.0",
    "tenacity>=9.1.2",
    "typer>=0.20.0",
    "uvloop>=0.22.1",
]

[tool.uv]
package = true
dev-dependencies = [
    "ruff",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "mypy",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
