[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "placeholder_name"
dynamic = ["version"]
description = "Code Project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "hydra-core>=1.3.2",
    "loguru>=0.7.3",
    "omegaconf>=2.3.0",
    "pydantic>=2.12.4",
    "returns>=0.26.0",
    "rich>=14.2.0",
    "tenacity>=9.1.2",
    "typer>=0.20.0",
    "uvloop>=0.22.1",
]

[tool.uv]
package = true
dev-dependencies = [
    "ruff",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "mypy",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"

[tool.hatch.version]
source = "vcs"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
files = ["src"]
exclude = ["\\.venv/", "build/", "dist/", "tests/"]

[[tool.mypy.overrides]]
module = [
    "litellm.*",
    "hydra.*",
    "omegaconf.*",
    "loguru.*",
    "yaml.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=term",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/.*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
